Fix the brand logo style and overflow issues on small devices

--- a/assets/src/blocks/godam-player/style.scss
+++ b/assets/src/blocks/godam-player/style.scss
@@ -452,7 +452,15 @@
 	}
 }
 
-#branding-icon {
-	height: 100%;
-	object-fit: fill;
+.vjs-control.vjs-custom-play-button {
+	width: auto !important;
+
+	@media screen and (max-width: 768px) {
+		display: none;
+	}
+
+	#branding-icon {
+		height: 100%;
+		object-fit: fill;
+	}
 }
